name:                stego-uuid
version:             0.1.0.0
synopsis:            A generator and verifier for steganographic numbers that look random
description:         Please see README.md
homepage:            https://github.com/dimitri-xyz/stego-uuid#readme
author:              Dimitri DeFigueiredo
maintainer:          defigueiredo@ucdavis.edu
copyright:           2017 Dimitri DeFigueiredo
license:             AGPL
license-file:        LICENSE
category:            steganography
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     doc/*.md
cabal-version:       >=1.20

library
  hs-source-dirs:     src
  exposed-modules:    StegoUUID

  default-language:   Haskell2010
  build-depends:      base
                    , uuid
                    , cryptonite
                    , bytestring
                    , memory

  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -j


test-suite test-stego-uuid

  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs

  build-depends:      base
                    , stego-uuid
                    , random
                    , uuid

  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -j -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/dimitri-xyz/stego-uuid
